// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a Action button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_action btn_large"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Back button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_secondary back btn_large"
  >
    <img
      alt="Go back"
      class="back-image"
      src="test-file-stub"
    />
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Large button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_large"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Medium button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_medium"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Primary button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_large"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Secondary button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_secondary btn_large"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a Small button 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_small"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a button with a testId 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_large"
    data-test="test-id"
    id="test-id"
    name="test-id"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render a button with custom properties 1`] = `
<DocumentFragment>
  <button
    bar="foo"
    class="btn btn_primary btn_large"
    foo="bar"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom class 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_large custom-class"
  >
    Default button
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with the required options 1`] = `
<DocumentFragment>
  <button
    class="btn btn_primary btn_large"
  >
    Default button
  </button>
</DocumentFragment>
`;
